--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 aerospike.hosts=159.223.67.81:3000
 aerospike.namespace=playground
+aerospike.set-name=person
 aerospike.username=aerouser
 aerospike.password=changeit
