--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ aerospike.namespace=playground
 aerospike.set-name=person
 aerospike.username=aerouser
 aerospike.password=changeit
+
+springdoc.swagger-ui.path=/swagger-ui.html
